prelims and anukramanike sent to another proof

--- a/jss-anukramanike1.tex
+++ b/jss-anukramanike1.tex
@@ -6,11 +6,7 @@
 {\small
 
 \noindent
-\qquad {\bf a}
-\smallskip
-
-\noindent
-{aMkurashiVla}, \pageref{aMkurashiVla}
+{{\large\textbf{a}}MkurashiVla}, \pageref{aMkurashiVla}
 
 \noindent
 {aMkusha}, \pageref{aMkusha}
@@ -873,13 +869,8 @@
 \noindent
 {aBayxMtarasAthxna}, \pageref{aBayxMtarasAthxna}
 
-\bigskip
 \noindent
-\qquad {\bf A}
-\smallskip
-
-\noindent
-{ABayxMtaraliMgadhAraNa}, \pageref{ABayxMtaraliMgadhAraNa}
+{{\large\textbf{A}}BayxMtaraliMgadhAraNa}, \pageref{ABayxMtaraliMgadhAraNa}
 
 \noindent
 {aBaya}, \pageref{aBaya}
@@ -1964,13 +1955,8 @@
 \noindent
 {Ahinxka}, \pageref{Ahinxka}
 
-\bigskip
 \noindent
-\qquad {\bf i}
-\smallskip
-
-\noindent
-{iMdirxya}, \pageref{iMdirxya}
+{{\large\textbf{i}}Mdirxya}, \pageref{iMdirxya}
 
 \noindent
 {iMdirxyanirasanasathxla}, \pageref{iMdirxyanirasanasathxla}
@@ -2077,13 +2063,8 @@
 \noindent
 {ihaloVkaviVra}, \pageref{ihaloVkaviVra}
 
-\bigskip
 \noindent
-\qquad {\bf I}
-\smallskip
-
-\noindent
-{IDa/IDA/ILa}, \pageref{IDa/IDA/ILa}
+{{\large\textbf{I}}Da/IDA/ILa}, \pageref{IDa/IDA/ILa}
 
 \noindent
 {IDAnALa}, \pageref{IDAnALa}
@@ -2136,13 +2117,8 @@
 \noindent
 {ILana}, \pageref{ILana}
 
-\bigskip
 \noindent
-\qquad {\bf u}
-\smallskip
-
-\noindent
-{ukAra}, \pageref{ukAra}
+{{\large\bf{u}}kAra}, \pageref{ukAra}
 
 \noindent
 {ukAraparxNama}, \pageref{ukAraparxNama}
@@ -2351,13 +2327,8 @@
 \noindent
 {uriliMga}, \pageref{uriliMga}
 
-\bigskip
 \noindent
-\qquad {\bf U}
-\smallskip
-
-\noindent
-{UdhavxRkuMDali}, \pageref{UdhavxRkuMDali}
+{{\large\textbf{U}}dhavxRkuMDali}, \pageref{UdhavxRkuMDali}
 
 \noindent
 {UdhavxRdAvxra}, \pageref{UdhavxRdAvxra}
@@ -2389,13 +2360,8 @@
 \noindent
 {UdhAvxRvasethx}, \pageref{UdhAvxRvasethx}
 
-\bigskip
 \noindent
-\qquad {\bf e}
-\smallskip
-
-\noindent
-{eMTu yoVga}, \pageref{eMTu yoVga}
+{{\large\textbf{e}}MTu yoVga}, \pageref{eMTu yoVga}
 
 \noindent
 {ekekxviMDu}, \pageref{ekekxviMDu}
@@ -2403,13 +2369,8 @@
 \noindent
 {eDe}, \pageref{eDe}
 
-\bigskip
 \noindent
-\qquad {\bf E}
-\smallskip
-
-\noindent
-{EkaBAjana}, \pageref{EkaBAjana}
+{{\large\textbf{E}}kaBAjana}, \pageref{EkaBAjana}
 
 \noindent
 {EkaBAjanasathxla}, \pageref{EkaBAjanasathxla}
@@ -2498,13 +2459,8 @@
 \noindent
 {ELavasethx}, \pageref{ELavasethx}
 
-\bigskip
 \noindent
-\qquad {\bf ai}
-\smallskip
-
-\noindent
-{aikayx}, \pageref{aikayx}
+{{\large\textbf{ai}}kayx}, \pageref{aikayx}
 
 \noindent
 {aikayxpada}, \pageref{aikayxpada}
@@ -2533,13 +2489,8 @@
 \noindent
 {aivatetxraDu tatatxvX}, \pageref{aivatetxraDu tatatxvX}
 
-\bigskip
 \noindent
-\qquad {\bf o}
-\smallskip
-
-\noindent
-{oMbatutx bAgilu}, \pageref{oMbatutx bAgilu}
+{{\large\textbf{o}}Mbatutx bAgilu}, \pageref{oMbatutx bAgilu}
 
 \noindent
 {oDalilalxda Bakatx}, \pageref{oDalilalxda Bakatx}
@@ -2550,13 +2501,8 @@
 \noindent
 {olavuliMgatirxvidha}, \pageref{olavuliMgatirxvidha}
 
-\bigskip
 \noindent
-\qquad {\bf O}
-\smallskip
-
-\noindent
-{OM (OMkAra)}, \pageref{OM (OMkAra)}
+{{\large\textbf{O}}M (OMkAra)}, \pageref{OM (OMkAra)}
 
 \noindent
 {OMkAraparxNava}, \pageref{OMkAraparxNava}
@@ -2573,13 +2519,8 @@
 \noindent
 {OM namaHshivAya}, \pageref{OM namaHshivAya}
 
-\bigskip
 \noindent
-\qquad {\bf au}
-\smallskip
-
-\noindent
-{aupaBoVgika}, \pageref{aupaBoVgika}
+{{\large\textbf{au}}paBoVgika}, \pageref{aupaBoVgika}
 
 \noindent
 {aupAdhika}, \pageref{aupAdhika}
@@ -2587,13 +2528,8 @@
 \noindent
 {aupAsana (aginxja)}, \pageref{aupAsana (aginxja)}
 
-\bigskip
 \noindent
-\qquad {\bf ka}
-\smallskip
-
-\noindent
-{kaMThapAvaDa}, \pageref{kaMThapAvaDa}
+{{\large\textbf{ka}}MThapAvaDa}, \pageref{kaMThapAvaDa}
 
 \noindent
 {kaMti}, \pageref{kaMti}
@@ -3345,13 +3281,8 @@
 \noindent
 {kwmAyaR}, \pageref{kwmAyaR}
 
-\bigskip
 \noindent
-\qquad {\bf Ka}
-\smallskip
-
-\noindent
-{KaMDajAcnxna}, \pageref{KaMDajAcnxna}
+{{\large\textbf{Ka}}MDajAcnxna}, \pageref{KaMDajAcnxna}
 
 \noindent
 {KaMDamaMDala}, \pageref{KaMDamaMDala}
@@ -3380,13 +3311,8 @@
 \noindent
 {KeVcariVmuderx}, \pageref{KeVcariVmuderx}
 
-\bigskip
 \noindent
-\qquad {\bf ga}
-\smallskip
-
-\noindent
-{gaMgevALuka}, \pageref{gaMgevALuka}
+{{\large\textbf{ga}}MgevALuka}, \pageref{gaMgevALuka}
 
 \noindent
 {gaMTekAyaka}, \pageref{gaMTekAyaka}
@@ -3736,13 +3662,8 @@
 \noindent
 {gwravAvadhAni}, \pageref{gwravAvadhAni}
 
-\bigskip
 \noindent
-\qquad {\bf Ga}
-\smallskip
-
-\noindent
-{GaMTAkaNaR}, \pageref{GaMTAkaNaR}
+{{\large\textbf{Ga}}MTAkaNaR}, \pageref{GaMTAkaNaR}
 
 \noindent
 {GaMTikAliMgamUla}, \pageref{GaMTikAliMgamUla}
@@ -3798,13 +3719,8 @@
 \noindent
 {GuNAkaSxranAyxya}, \pageref{GuNAkaSxranAyxya}
 
-\bigskip
 \noindent
-\qquad {\bf ca}
-\smallskip
-
-\noindent
-{caMdarx}, \pageref{caMdarx}
+{{\large\textbf{ca}}Mdarx}, \pageref{caMdarx}
 
 \noindent
 {cakarx}, \pageref{cakarx}
@@ -4316,13 +4232,8 @@
 \noindent
 {cwSaSiTxvideyx}, \pageref{cwSaSiTxvideyx}
 
-\bigskip
 \noindent
-\qquad {\bf Ca}
-\smallskip
-
-\noindent
-{CatitxVsatatatxvX}, \pageref{CatitxVsatatatxvX}
+{{\large\textbf{Ca}}titxVsatatatxvX}, \pageref{CatitxVsatatatxvX}
 
 \noindent
 {CatitxVsaparxNava}, \pageref{CatitxVsaparxNava}
@@ -4333,13 +4244,8 @@
 \noindent
 {CAyAjiVva}, \pageref{CAyAjiVva}
 
-\bigskip
 \noindent
-\qquad {\bf ja}
-\smallskip
-
-\noindent
-{jaMgama}, \pageref{jaMgama}
+{{\large\textbf{ja}}Mgama}, \pageref{jaMgama}
 
 \noindent
 {jaMgamataqpitx}, \pageref{jaMgamataqpitx}
@@ -4923,13 +4829,8 @@
 \noindent
 {joyxVtiliRMgAnusaMdhAna}, \pageref{joyxVtiliRMgAnusaMdhAna}
 
-\bigskip
 \noindent
-\qquad {\bf ta}
-\smallskip
-
-\noindent
-{taMtarx}, \pageref{taMtarx}
+{{\large\textbf{ta}}Mtarx}, \pageref{taMtarx}
 
 \noindent
 {taMtarxBeVda}, \pageref{taMtarxBeVda}
@@ -5822,13 +5723,8 @@
 \noindent
 {totutxtana}, \pageref{totutxtana}
 
-\bigskip
 \noindent
-\qquad {\bf da}
-\smallskip
-
-\noindent
-{daMDa}, \pageref{daMDa}
+{{\large\textbf{da}}MDa}, \pageref{daMDa}
 
 \noindent
 {daMDaka}, \pageref{daMDaka}
@@ -6235,13 +6131,8 @@
 \noindent
 {devxYtAdevxYtamata}, \pageref{devxYtAdevxYtamata}
 
-\bigskip
 \noindent
-\qquad {\bf dha}
-\smallskip
-
-\noindent
-{dhanaMjaya}, \pageref{dhanaMjaya}
+{{\large\textbf{dha}}naMjaya}, \pageref{dhanaMjaya}
 
 \noindent
 {dhanaMjayavAyu}, \pageref{dhanaMjayavAyu}
@@ -6330,13 +6221,9 @@
 \noindent
 {dhwti}, \pageref{dhwti}
 
-\bigskip
-\noindent
-\qquad {\bf na}
-\smallskip
 
 \noindent
-{naMdi}, \pageref{naMdi}
+{{\large\textbf{na}}Mdi}, \pageref{naMdi}
 
 \noindent
 {naMdikeVshavxrasaMhite}, \pageref{naMdikeVshavxrasaMhite}
@@ -7235,13 +7122,8 @@
 \noindent
 {nwli}, \pageref{nwli}
 
-\bigskip
 \noindent
-\qquad {\bf pa}
-\smallskip
-
-\noindent
-{paMcakaMcuka}, \pageref{paMcakaMcuka}
+{{\large\textbf{pa}}McakaMcuka}, \pageref{paMcakaMcuka}
 
 \noindent
 {paMcakameRVMdirxya}, \pageref{paMcakameRVMdirxya}
@@ -8716,13 +8598,8 @@
 \noindent
 {pwSiTxkamaMtarx}, \pageref{pwSiTxkamaMtarx}
 
-\bigskip
 \noindent
-\qquad {\bf ba}
-\smallskip
-
-\noindent
-{baMdha}, \pageref{baMdha}
+{{\large\textbf{ba}}Mdha}, \pageref{baMdha}
 
 \noindent
 {baMdhana}, \pageref{baMdhana}
@@ -8958,13 +8835,8 @@
 \noindent
 {boVLu}, \pageref{boVLu}
 
-\bigskip
 \noindent
-\qquad {\bf Ba}
-\smallskip
-
-\noindent
-{Bakatx}, \pageref{Bakatx}
+{{\large\textbf{Ba}}katx}, \pageref{Bakatx}
 
 \noindent
 {BakatxdeVhikadeVva}, \pageref{BakatxdeVhikadeVva}
@@ -9500,13 +9372,8 @@
 \noindent
 {BwtikiVdiVkASx}, \pageref{BwtikiVdiVkASx}
 
-\bigskip
 \noindent
-\qquad {\bf ma}
-\smallskip
-
-\noindent
-{maMDala}, \pageref{maMDala}
+{{\large\textbf{ma}}MDala}, \pageref{maMDala}
 
 \noindent
 {maMtarx}, \pageref{maMtarx}
@@ -10354,13 +10221,8 @@
 \noindent
 {mwnAMtamuderx}, \pageref{mwnAMtamuderx}
 
-\bigskip
 \noindent
-\qquad {\bf ya}
-\smallskip
-
-\noindent
-{yaMtarxvAhaka}, \pageref{yaMtarxvAhaka}
+{{\large\textbf{ya}}MtarxvAhaka}, \pageref{yaMtarxvAhaka}
 
 \noindent
 {yaMtorxVdadhxraNa}, \pageref{yaMtorxVdadhxraNa}
@@ -10446,13 +10308,8 @@
 \noindent
 {yoVgirATf}, \pageref{yoVgirATf}
 
-\bigskip
 \noindent
-\qquad {\bf ra}
-\smallskip
-
-\noindent
-{rakeSx}, \pageref{rakeSx}
+{{\large\textbf{ra}}keSx}, \pageref{rakeSx}
 
 \noindent
 {rajasUsxtakanirasana}, \pageref{rajasUsxtakanirasana}
@@ -10604,13 +10461,8 @@
 \noindent
 {reVNukapiVTha}, \pageref{reVNukapiVTha}
 
-\bigskip
 \noindent
-\qquad {\bf la}
-\smallskip
-
-\noindent
-{laMbaka}, \pageref{laMbaka}
+{{\large\textbf{la}}Mbaka}, \pageref{laMbaka}
 
 \noindent
 {laMbanabage}, \pageref{laMbanabage}
@@ -11191,13 +11043,8 @@
 \noindent
 {loVkAginxjaBasamx}, \pageref{loVkAginxjaBasamx}
 
-\bigskip
 \noindent
-\qquad {\bf va}
-\smallskip
-
-\noindent
-{vaMdanaBakitx}, \pageref{vaMdanaBakitx}
+{{\large\textbf{va}}MdanaBakitx}, \pageref{vaMdanaBakitx}
 
 \noindent
 {vaMshayxshiSayx}, \pageref{vaMshayxshiSayx}
@@ -11727,13 +11574,8 @@
 \noindent
 {voyxVmAsatxrXmaMtarx}, \pageref{voyxVmAsatxrXmaMtarx}
 
-\bigskip
 \noindent
-\qquad {\bf sha}
-\smallskip
-
-\noindent
-{shaMKini}, \pageref{shaMKini}
+{{\large\textbf{sha}}MKini}, \pageref{shaMKini}
 
 \noindent
 {shaMBu}, \pageref{shaMBu}
@@ -12563,13 +12405,8 @@
 \noindent
 {shwrxtasheYva}, \pageref{shwrxtasheYva}
 
-\bigskip
 \noindent
-\qquad {\bf Sa}
-\smallskip
-
-\noindent
-{SaTasxmAmxjaRne}, \pageref{SaTasxmAmxjaRne}
+{{\large\textbf{Sa}}TasxmAmxjaRne}, \pageref{SaTasxmAmxjaRne}
 
 \noindent
 {SaTfkaqSivAyxpAra}, \pageref{SaTfkaqSivAyxpAra}
@@ -12895,13 +12732,8 @@
 \noindent
 {SoVDashoVpacAra}, \pageref{SoVDashoVpacAra}
 
-\bigskip
 \noindent
-\qquad {\bf sa}
-\smallskip
-
-\noindent
-{saMkara}, \pageref{saMkara}
+{{\large\textbf{sa}}Mkara}, \pageref{saMkara}
 
 \noindent
 {saMkalapxjiVvi}, \pageref{saMkalapxjiVvi}
@@ -14148,13 +13980,8 @@
 \noindent
 {swKayxparxNava}, \pageref{swKayxparxNava}
 
-\bigskip
 \noindent
-\qquad {\bf ha}
-\smallskip
-
-\noindent
-{haMsa}, \pageref{haMsa}
+{{\large\textbf{ha}}Msa}, \pageref{haMsa}
 
 \noindent
 {haMsatarxya}, \pageref{haMsatarxya}
@@ -14262,7 +14089,7 @@
 {\small
 
 \noindent
-{aMgasathxla-liMgasathxla saMbaMdha}, \pageref{aMgasathxla-liMgasathxla saMbaMdha}
+{{\large\textbf{a}}Mgasathxla-liMgasathxla saMbaMdha}, \pageref{aMgasathxla-liMgasathxla saMbaMdha}
 
 \noindent
 {arivu kuruhu}, \pageref{arivu kuruhu}
@@ -14280,7 +14107,7 @@
 {aLivu}, \pageref{aLivu}
 
 \noindent
-{AkAsha}, \pageref{AkAsha}
+{{\large\textbf{A}}kAsha}, \pageref{AkAsha}
 
 \noindent
 {AkAshada pUvARsharxya}, \pageref{AkAshada pUvARsharxya}
@@ -14307,13 +14134,13 @@
 {AroVha avaroVha}, \pageref{AroVha avaroVha}
 
 \noindent
-{iMdumada}, \pageref{iMdumada}
+{{\large\textbf{i}}Mdumada}, \pageref{iMdumada}
 
 \noindent
 {iceCx}, \pageref{iceCx}
 
 \noindent
-{upadeVshapariVkeSx}, \pageref{upadeVshapariVkeSx}
+{{\large\textbf{u}}padeVshapariVkeSx}, \pageref{upadeVshapariVkeSx}
 
 \noindent
 {upame}, \pageref{upame}
@@ -14337,7 +14164,7 @@
 {uLivu}, \pageref{uLivu}
 
 \noindent
-{eMjalusUtaka}, \pageref{eMjalusUtaka}
+{{\large\textbf{e}}MjalusUtaka}, \pageref{eMjalusUtaka}
 
 \noindent
 {eMjalusUtakanirasana}, \pageref{eMjalusUtakanirasana}
@@ -14346,7 +14173,7 @@
 {eraDaLida Ekarasa}, \pageref{eraDaLida Ekarasa}
 
 \noindent
-{EkamuKadalilx niravayajapa}, \pageref{EkamuKadalilx niravayajapa}
+{{\large\textbf{E}}kamuKadalilx niravayajapa}, \pageref{EkamuKadalilx niravayajapa}
 
 \noindent
 {EkamuKarudArxkiSx}, \pageref{EkamuKarudArxkiSx}
@@ -14370,7 +14197,7 @@
 \qquad {parxmatha gaNaMgaLu}, \pageref{ELunUrepapxtutx parxmatha gaNaMgaLu}
 
 \noindent
-{aikayx}, \pageref{aikayx}
+{{\large\textbf{ai}}kayx}, \pageref{aikayx}
 
 \noindent
 {aikayxsathxlaparavasutxBAvanAshana}, \pageref{aikayxsathxlaparavasutxBAvanAshana}
@@ -14388,7 +14215,7 @@
 {aivatatxkaSxra}, \pageref{aivatatxkaSxra}
 
 \noindent
-{oMdiMdirxya modalAgi aidiMdirxya}
+{{\large\textbf{o}}MdiMdirxya modalAgi aidiMdirxya}
 
 \noindent
 \qquad {kaDeyAda pArxNigaLu}, \pageref{oMdiMdirxya modalAgi aidiMdirxya kaDeyAda pArxNigaLu}
@@ -14400,7 +14227,7 @@
 {okukxdu mikukxdu}, \pageref{okukxdu mikukxdu}
 
 \noindent
-{kaMgaLa keYgaLalapiRsuvudu}, \pageref{kaMgaLa keYgaLalapiRsuvudu}
+{{\large\textbf{ka}}MgaLa keYgaLalapiRsuvudu}, \pageref{kaMgaLa keYgaLalapiRsuvudu}
 
 \noindent
 {kaMgaLa sUtaka hiMguvudu}, \pageref{kaMgaLa sUtaka hiMguvudu}
@@ -14454,7 +14281,7 @@
 {keYlAsaveMba BavasAgara}, \pageref{keYlAsaveMba BavasAgara}
 
 \noindent
-{gatiya patha}, \pageref{gatiya patha}
+{{\large\textbf{ga}}tiya patha}, \pageref{gatiya patha}
 
 \noindent
 {gadidxge dhAvaLi}, \pageref{gadidxge dhAvaLi}
@@ -14469,10 +14296,10 @@
 {guruvAdaDe kAlilalxdiruvudu}, \pageref{guruvAdaDe kAlilalxdiruvudu}
 
 \noindent
-{GArxNadiMda apiRsuvudu}, \pageref{GArxNadiMda apiRsuvudu}
+{{\large\textbf{GArx}}NadiMda apiRsuvudu}, \pageref{GArxNadiMda apiRsuvudu}
 
 \noindent
-{jaMgamada pUvARsharxyava}
+{{\large\textbf{ja}}Mgamada pUvARsharxyava}
 
 \noindent
 \qquad {kaLeyuvudu}, \pageref{jaMgamada pUvARsharxyava kaLeyuvudu}
@@ -14505,7 +14332,7 @@
 {jiVva nijiRVvadalilx aDaguvudu}, \pageref{jiVva nijiRVvadalilx aDaguvudu}
 
 \noindent
-{tatatxvXvelalxkakxdhikavAgipApxta}, \pageref{tatatxvXvelalxkakxdhikavAgipApxta}
+{{\large\textbf{ta}}tatxvXvelalxkakxdhikavAgipApxta}, \pageref{tatatxvXvelalxkakxdhikavAgipApxta}
 
 \noindent
 {tadagxtanAguvudu}, \pageref{tadagxtanAguvudu}
@@ -14544,7 +14371,7 @@
 {terahilalxda paripUNaR}, \pageref{terahilalxda paripUNaR}
 
 \noindent
-{dashavidha vAyugaLanunx}
+{{\large\textbf{da}}shavidha vAyugaLanunx}
 
 \noindent
 \qquad {nililxsuvudu}, \pageref{dashavidha vAyugaLanunx nililxsuvudu}
@@ -14559,7 +14386,7 @@
 {deVhAdigaLa adhAyxsa}, \pageref{deVhAdigaLa adhAyxsa}
 
 \noindent
-{naTaTxliMga}, \pageref{naTaTxliMga}
+{{\large\textbf{na}}TaTxliMga}, \pageref{naTaTxliMga}
 
 \noindent
 {naDegeTaTxvanu}, \pageref{naDegeTaTxvanu}
@@ -14583,7 +14410,7 @@
 {nihitada uBayasathxla}, \pageref{nihitada uBayasathxla}
 
 \noindent
-{paMcabarxhamxhaMgu}, \pageref{paMcabarxhamxhaMgu}
+{{\large\textbf{pa}}McabarxhamxhaMgu}, \pageref{paMcabarxhamxhaMgu}
 
 \noindent
 {paMcaBUtagaLa pariNAmagaLu}, \pageref{paMcaBUtagaLa pariNAmagaLu}
@@ -14667,7 +14494,7 @@
 \qquad {kaLeyuvudu}, \pageref{paqthivxya pUvARsharxyava kaLeyuvudu}
 
 \noindent
-{bayala rUpa}, \pageref{bayala rUpa}
+{{\large\textbf{ba}}yala rUpa}, \pageref{bayala rUpa}
 
 \noindent
 {bayaloLagaNa rUpu,}
@@ -14721,7 +14548,7 @@
 {beLipxna hadinAresaLa piVTha}, \pageref{beLipxna hadinAresaLa piVTha}
 
 \noindent
-{BaMgitava mADuva}
+{{\large\textbf{Ba}}Mgitava mADuva}
 
 \noindent
 \qquad {iMdirxyakaraNaMgaLu}, \pageref{BaMgitava mADuva iMdirxyakaraNaMgaLu}
@@ -14787,7 +14614,7 @@
 {BeVda}, \pageref{BeVda}
 
 \noindent
-{madhayxmada suKa}, \pageref{madhayxmada suKa}
+{{\large\textbf{ma}}dhayxmada suKa}, \pageref{madhayxmada suKa}
 
 \noindent
 {mana hALAguvudu}, \pageref{mana hALAguvudu}
@@ -14853,7 +14680,7 @@
 {mUvatAtxru tatatxvX}, \pageref{mUvatAtxru tatatxvX}
 
 \noindent
-{rudarxna nosalagaNiNxna kicucx}, \pageref{rudarxna nosalagaNiNxna kicucx}
+{{\large\textbf{ru}}darxna nosalagaNiNxna kicucx}, \pageref{rudarxna nosalagaNiNxna kicucx}
 
 \noindent
 {rudarxna pAshava hodadxdiruvudu}, \pageref{rudarxna pAshava hodadxdiruvudu}
@@ -14877,7 +14704,7 @@
 {rUpusahita Bakatx}, \pageref{rUpusahita Bakatx}
 
 \noindent
-{liMgakekx AdhAravAda Bakatx}, \pageref{liMgakekx AdhAravAda Bakatx}
+{{\large\textbf{li}}Mgakekx AdhAravAda Bakatx}, \pageref{liMgakekx AdhAravAda Bakatx}
 
 \noindent
 {liMgadaMga}, \pageref{liMgadaMga}
@@ -14907,7 +14734,7 @@
 {liMgavilalxda noVTa}, \pageref{liMgavilalxda noVTa}
 
 \noindent
-{vAyuvina aMsha}, \pageref{vAyuvina aMsha}
+{{\large\textbf{vA}}yuvina aMsha}, \pageref{vAyuvina aMsha}
 
 \noindent
 {vAyuvina pUvARsharxya}, \pageref{vAyuvina pUvARsharxya}
@@ -14928,7 +14755,7 @@
 {viSuNxvina haMgu}, \pageref{viSuNxvina haMgu}
 
 \noindent
-{shakitx matutx tatatxvX}, \pageref{shakitx matutx tatatxvX}
+{{\large\textbf{sha}}kitx matutx tatatxvX}, \pageref{shakitx matutx tatatxvX}
 
 \noindent
 {shabuda liMgeYkayx}, \pageref{shabuda liMgeYkayx}
@@ -14967,7 +14794,7 @@
 {shorxVtarxdiMda apiRsuvudu}, \pageref{shorxVtarxdiMda apiRsuvudu}
 
 \noindent
-{SaTasxthXlagaLige nUroMdu}
+{{\large\textbf{Sa}}TasxthXlagaLige nUroMdu}
 
 \noindent
 \qquad {sathxlagaLa saMbaMdha}, \pageref{SaTasxthXlagaLige nUroMdu sathxlagaLa saMbaMdha}
@@ -14979,7 +14806,7 @@
 {SaDivxdhaliMgaparxsAda}, \pageref{SaDivxdhaliMgaparxsAda}
 
 \noindent
-{saMkiSxpatx BasamxtayArikeya} 
+{{\large\textbf{sa}}MkiSxpatx BasamxtayArikeya} 
 
 \noindent
 \qquad {vidhAna}, \pageref{saMkiSxpatx BasamxtayArikeya vidhAna}
@@ -15084,7 +14911,7 @@
 {sUtaka nAlukx}, \pageref{sUtaka nAlukx}
 
 \noindent
-{hatutxpAdoVdaka}, \pageref{hatutxpAdoVdaka}
+{{\large\textbf{ha}}tutxpAdoVdaka}, \pageref{hatutxpAdoVdaka}
 
 \noindent
 {hadinAlukx terana Bakitx}, \pageref{hadinAlukx terana Bakitx}
