--- a/nivedane.tex
+++ b/nivedane.tex
@@ -7,7 +7,7 @@
 \centerline{\large\bfseries 1}
 \medskip
 
-jagatitxna yAvudeV BASeya amUlayx saMpatetxMdare sAhitayx matutx saMsakxqqti. ivugaLa mUla savxrUpavanunx tiLiyalu atayxgatayxvAda AkaraveMdare niGaMTu. oMdu BASeya sakala padasaMpatutx alilx saMgarxhagoMDirutatxde. pArxdeVshikate, dhamaR, jAti, mata hiVge halavu hinenxlegaLiMda oMdu pada aneVka rUpagaLanunx, athaRgaLanunx paDedirutatxde. niGaMTuviniMda avugaLanunx saMpUNaRvAgi ariyalu sAdhayxvilalxdidadxrU, adoMdu toVrudAriyAgirutatxde. sAdhAraNavAgi niGaMTuvinalilx athaRkekx hecucx mahatavx niVDalAgutatxde. padagaLige iruva athaRgaLu elalx kAlakUkx oMdeV bageyAgi iruvudilalx. kAlAnuguNavAgi shabadxrUpagaLu, shabAdxthaRgaLu parivataRneyanunx paDeyutitxrutatxve. I hinenxleyalilx parxtiyoMdu BASeyU jaMgamasavxrUpiyAgirutatxde. hAgAgi iMtaha jaMgamasavxrUpi BASeya padasaMpatatxnunx athaRmADikoLaLxlu kAladiMda kAlakekx hosa hosa niGaMTugaLu sidadhxgoLuLxtatxve. hosa niGaMTugaLu haLeya athaRgaLanUnx dAKalisikoMDu hosa visatxqqta athaRvanunx niVDutatxve. badalAguva deVsha, kAla, cariterxgaLige anuguNavAgi saqSiTxgoLuLxva elalx padasaMpatatxnunx tamomxLage kUDisikoMDu niGaMTugaLu rUpugoLuLxtatxve.
+jagatitxna yAvudeV BASeya amUlayx saMpatetxMdare sAhitayx matutx saMsakxqqti. ivugaLa mUla savxrUpavanunx tiLiyalu atayxgatayxvAda AkaraveMdare niGaMTu. oMdu BASeya sakala padasaMpatutx alilx saMgarxhagoMDirutatxde. pArxdeVshikate, dhamaR, jAti, mata hiVge halavu hinenxlegaLiMda oMdu pada aneVka rUpagaLanunx, athaRgaLanunx paDedirutatxde. niGaMTuviniMda avugaLanunx saMpUNaRvAgi ariyalu sAdhayxvilalxdidadxrU, adoMdu toVrudAriyAgirutatxde. sAdhAraNavAgi niGaMTuvinalilx athaRkekx hecucx mahatavx niVDa\-lAgutatxde. padagaLige iruva athaRgaLu elalx kAlakUkx oMdeV bageyAgi iruvudilalx. kAlAnuguNavAgi shabadxrUpagaLu, shabAdxthaR\-gaLu parivataRneyanunx paDeyutitxrutatxve. I hinenxleyalilx parxtiyoMdu BASeyU jaMgamasavxrUpiyAgirutatxde. \hbox{hAgAgi} iMtaha jaMgamasavxrUpi BASeya padasaMpatatxnunx athaRmADikoLaLxlu kAladiMda kAlakekx hosa hosa niGaMTugaLu sidadhxgoLuLxtatxve. hosa niGaMTugaLu haLeya athaRgaLanUnx dAKalisikoMDu hosa visatxqqta athaRvanunx niVDutatxve. badalAguva deVsha, kAla, cariterxgaLige anuguNavAgi saqSiTxgoLuLxva elalx padasaMpatatxnunx tamomxLage kUDisikoMDu niGaMTugaLu rUpugoLuLxtatxve.
 
 \medskip
 
@@ -15,7 +15,7 @@ niGaMTugaLa cariterxge hoVlisidare pAriBASika niGaMTugaLa racane ititxVcinadu. p
 
 \medskip
 
-iMdu vijAcnxna matutx keYgArikegaLige saMbaMdhisidaMte vipulavAda pAriBASika padakoVshagaLu racanegoMDive. Adare samAja, saMsakxqqtigaLa keSxVtarxkekx saMbaMdhisidaMte aSuTx saMKeyxya pAriBASika niGaMTugaLu rUpugoMDilalx. AdarU visatxqqta parikalapxneyalilx pAriBASika AkaragaLaMte toVruva loVkoVpakArakavAda shAsatxrXkaqtigaLu heVraLavAgive. udAharaNege gajashAsatxrX, hayashAsatxrX, sUpashAsatxrX, shakunashAsatxrX, sAmudirxkashAsatxrX, shilapxshAsatxrX itAyxdi. AdudariMdaleV saMsakxqqtada AlaMkArikanAda rAjasheVKaranu kavigaLanunx kAvayxkavi, shAsatxrXkavi matutx uBayakavi eMdu mUru bagegaLAgi viMgaDisutAtxne. kAvayxveMbudu sArataH anuBavaveVdayxvAdare, shAsatxrXveMbudu budidhx\-gamayx. anuBava matutx AloVcanegaLu manuSayxna sahaja parxvaqtitxgaLu. aMteyeV veYdika dashaRnagaLa matutx jeYna hAgU bwdadhx dashaRnagaLa saMbaMdhadalilx BAratiVya tatatxvXdashaRnada aneVka padakoVshagaLu racitavAgive.
+iMdu vijAcnxna matutx keYgArikegaLige saMbaMdhisidaMte vipulavAda pAriBASika padakoVshagaLu racanegoMDive. Adare samAja, saMsakxqqtigaLa keSxVtarxkekx saMbaMdhisidaMte aSuTx saMKeyxya pAriBASika niGaMTugaLu rUpugoMDilalx. AdarU visatxqqta parikalapxneyalilx pAriBASika AkaragaLaMte toVruva loVkoVpakArakavAda shAsatxrXkaqtigaLu heVraLavAgive. udAharaNege gajashAsatxrX, hayashAsatxrX, sUpashAsatxrX, shakunashAsatxrX, sAmudirxkashAsatxrX, shilapxshAsatxrX itAyxdi. AdudariMdaleV saMsakxqqtada AlaMkArikanAda rAjasheVKaranu kavigaLanunx kAvayxkavi, shAsatxrXkavi matutx uBayakavi eMdu mUru bagegaLAgi viMgaDisutAtxne. kAvayxveMbudu sArataH anuBavaveVdayxvAdare, shAsatxrX\-veMbudu budidhx\-gamayx. anuBava matutx AloVcanegaLu manuSayxna sahaja parxvaqtitxgaLu. aMteyeV veYdika dashaRnagaLa matutx jeYna hAgU bwdadhx dashaRnagaLa saMbaMdhadalilx BAratiVya tatatxvXdashaRnada aneVka padakoVshagaLu racitavAgive.
 
 \medskip
 
@@ -35,7 +35,7 @@ I hinenxleyalilx BAratada oMdu parxmuKa dhamaRvAda viVrasheYva-liMgAyatada tAtit
 
 \medskip
 
-vacanapitAmaha Pa.gu. haLakaTiTxyavaru \textbf{1943ralilx shivAnuBava shabadxkoVsha}da mUlaka viVrasheYva pAriBASika saMgati\-gaLanunx vivarisuva kelasavanunx pArxraMBisidaru. anaMtaradalilx kANisikoMDa mahatavxda viVrasheYva pAriBASika padakoVshaveMdare basava samitiya \textbf{viVrasheYva pAriBASika padakoVsha} hAgU porx. eM.eM. kalabugiRyavara parxdhAna saMpAdakatavx\-dalilx, kananxDa matutx saMsakxqqti ilAKeyu parxkaTisida samagarx vacana saMpuTagaLa koneya saMpuTavAda \textbf{vacana pariBASA\-koVsha}. I saMpuTavanunx DA. enf.\,ji. mahadeVvapapxnavaru saMpAdisidAdxre. basava samitiya viVrasheYva pAriBASika padakoVshavu vacana hAgU kananxDa \hbox{viVrasheYva} kAvayxgaLanunx oLagoMDu racitavAgidadxre, vacana pariBASAkoVshadalilx keVvala vacanasaMbaMdhi pAriBASika padagaLanunx dAKalisalAgide. I madheyx DA. jayashirxV daMDeyavaru \textbf{beDagina vacana pariBASA koVsha}vanunx racisidAdxre. jeesfesf garxMthamAleyiMda saMsakxqqta BASeya \textbf{viVrasheYva pAriBASika padakoVsha} vanunx DA. eM. shivakumArasAvxmi, DA. si. shiva\-kumArasAvxmi, DA. parxBusAvxmi, vidAvxnf DA. parxBuliMga hebAbxrf, vidAvxnf ecf.vi. nAgarAjarAvf, porx. Ti.Arf.\break mahadeVvayayx, vidAvxnf ke.si. gurumalalxdeVvaru, shirxVmati esf. gwri ivarugaLu saMpAdi\-sidAdxre. I elalx niGaMTugaLu oMdoMdu shAKeya pariBASeyanunx mAtarx dAKalisidudxvu. hiVgAgi samagarxvU visatxqqtavU Ada oMdu viVrasheYva pAriBASika niGaMTina avashayxkate idedxV itutx. idanunx pUreYsuva niTiTxnalilx Igina \textbf{viVrasheYva - liMgAyata pAriBASika padagaLanunx oLagoMDa shivapada ratanxkoVsha} niGaMTu rUpisalu ciMtisalAyitu.
+vacanapitAmaha Pa.gu. haLakaTiTxyavaru \textbf{1943ralilx shivAnuBava shabadxkoVsha}da mUlaka viVrasheYva pAriBASika saMgati\-gaLanunx vivarisuva kelasavanunx pArxraMBisidaru. anaMtaradalilx kANisikoMDa mahatavxda viVrasheYva pAriBASika padakoVsha\-veMdare basava samitiya \textbf{viVrasheYva pAriBASika padakoVsha} hAgU porx. eM.eM. kalabugiRyavara parxdhAna saMpAdakatavx\-dalilx, kananxDa matutx saMsakxqqti ilAKeyu parxkaTisida samagarx vacana saMpuTagaLa koneya saMpuTavAda \textbf{vacana pariBASA\-koVsha}. I saMpuTa\-vanunx DA. enf.\,ji. mahadeVvapapxnavaru saMpAdisidAdxre. basava samitiya viVrasheYva pAriBASika padakoVshavu vacana hAgU kananxDa \hbox{viVrasheYva} kAvayxgaLanunx oLagoMDu racitavAgidadxre, vacana pariBASAkoVshadalilx keVvala vacanasaMbaMdhi pAri\-BASika padagaLanunx dAKalisalAgide. I madheyx DA. jayashirxV daMDeyavaru \textbf{beDagina vacana pariBASA koVsha}vanunx racisidAdxre. jeesfesf garxMthamAleyiMda saMsakxqqta BASeya \textbf{viVrasheYva pAriBASika padakoVsha} vanunx DA. eM. shivakumArasAvxmi, DA. si. shiva\-kumArasAvxmi, DA. parxBusAvxmi, vidAvxnf DA. parxBuliMga hebAbxrf, vidAvxnf ecf.vi. nAgarAjarAvf, porx. Ti.Arf.\break mahadeVvayayx, vidAvxnf ke.si. gurumalalxdeVvaru, shirxVmati esf. gwri ivarugaLu saMpAdi\-sidAdxre. I elalx niGaMTugaLu oMdoMdu shAKeya pariBASeyanunx mAtarx dAKalisidudxvu. hiVgAgi samagarxvU visatxqqtavU Ada oMdu viVrasheYva pAriBASika niGaMTina avashayxkate idedxV itutx. idanunx pUreYsuva niTiTxnalilx Igina \textbf{viVrasheYva - liMgAyata pAriBASika padagaLanunx oLagoMDa shivapada ratanxkoVsha} niGaMTu rUpisalu ciMtisalAyitu.
 
 \medskip
 
@@ -59,7 +59,7 @@ niGaMTuvina kAyaRda matotxMdu visatxraNeyAgi kananxDa viVrasheYva kAvayxgaLiMda 
 
 \medskip
 
-I paTiTxganuguNavAgi viVrasheYva kAvayxgaLanunx saMgarxhisuvudu savAlina kelasavAgitutx. elalx kavigaLa kaqtigaLu oMdeV kaDe laBayxvAgutitxralilalx. A kAraNadiMda meYsUru vishavxvidAyxnilayavU seVridaMte rAjayxda aneVka kaDegaLalilx aneVka tiMgaLugaLa kAla I garxMthagaLanunx huDuki, saMgarxhisi agatayxbidadx kaDegaLalilx avugaLa nakalugaLanunx tayArisi oMdoMdu parxtiyanunx vidAvxMsarige niVDa\-lAyitu. I padagaLanunx saMgarxhisalu padapaTiTxke namUneyanunx sidadhxpaDisalAgitutx. adaralilx kAvayxda hesaru, kaviya hesaru, parxkaTavAda vaSaR, pAriBASika pada, parxyoVga, puTa saMKeyx, saMdhi/adhAyxya, pada saMKeyx muMtAda elalx vivaragaLanUnx namUdisabeVkeMdu sUcisalAyitu.
+I paTiTxganuguNavAgi viVrasheYva kAvayxgaLanunx saMgarxhisuvudu savAlina kelasavAgitutx. elalx kavigaLa kaqtigaLu oMdeV kaDe laBayxvAgutitxralilalx. A kAraNadiMda meYsUru vishavxvidAyxnilayavU seVridaMte rAjayxda aneVka kaDegaLalilx aneVka tiMgaLugaLa kAla I garxMthagaLanunx huDuki, saMgarxhisi agatayxbidadx kaDegaLalilx avugaLa nakalugaLanunx tayArisi oMdoMdu parxtiyanunx vidAvxMsarige niVDa\-lAyitu. I padagaLanunx saMgarxhisalu padapaTiTxke namUneyanunx sidadhxpaDisalAgitutx. adaralilx kAvayxda hesaru, kaviya hesaru, parxkaTavAda vaSaR, pAriBASika pada, parxyoVga, puTa saMKeyx, saMdhi/adhAyxya, pada saMKeyx muMtAda elalx vivaragaLanUnx namUdisa\-beVkeMdu sUcisalAyitu.
 
 \medskip
 
@@ -75,7 +75,7 @@ I naDuve pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavaru pAriBASika padagaLanun
 
 \medskip
 
-I elalx pUvaRBAviVkAyaRgaLu mugida baLika ulelxVKada padagaLige athaR bareyuva kelasa pArxraMBavAyitu. Aga kananxDa sAhitayx pariSatitxna kananxDa-kananxDa niGaMTuviniMdalU, itara viVrasheYva pariBASAkoVshagaLalilx adAgaleV koTiTxruva athaRgaLanunx yathoVcitavAgi baLasikoLaLxlAyitu. Aga hecucx upayoVgakekx baMda garxMthagaLeMdare kananxDa saMsakxqqti ilAKeya vacana pariBASAkoVsha, kananxDa sAhitayx pariSatitxna kananxDa niGaMTu, matutx basava samitiya viVrasheYva pAri\-BASika padakoVsha. jotege saMsakxqqtadiMda kananxDakekx BASAMtaravAgidadx viVrasheYva pAriBASika padakoVshagaLu. I sivxVkArada kelasadalilx agatayxvidadx kaDegaLalilx sUkatx pariSakxraNe, saMgarxha hAgU visatxraNegaLanunx mADalAyitu.
+I elalx pUvaRBAviVkAyaRgaLu mugida baLika ulelxVKada padagaLige athaR bareyuva kelasa pArxraMBavAyitu. Aga kananxDa sAhitayx pariSatitxna kananxDa-kananxDa niGaMTuviniMdalU, itara viVrasheYva pariBASAkoVshagaLalilx adAgaleV koTiTxruva athaRgaLanunx yathoVcitavAgi baLasikoLaLxlAyitu. Aga hecucx upayoVgakekx baMda garxMthagaLeMdare kananxDa saMsakxqqti ilAKeya vacana pariBASA\-koVsha, kananxDa sAhitayx pariSatitxna kananxDa niGaMTu, matutx basava samitiya viVrasheYva pAri\-BASika padakoVsha. jotege saMsakxqqtadiMda kananxDakekx BASAMtaravAgidadx viVrasheYva pAriBASika padakoVshagaLu. I sivxVkArada kelasadalilx agatayxvidadx kaDegaLalilx sUkatx pariSakxraNe, saMgarxha hAgU visatxraNegaLanunx mADalAyitu.
 
 \medskip
 
@@ -87,7 +87,7 @@ I kAyaRdalilx namamx neravige baMdadudx ``vacana saMcaya DATfkAM'' eMba  Ayxpf n
 
 \medskip
 
-I naDuve samitiya sadasayxrAgidadx shirxV enf. basavArAdhayx, DA. esf. vidAyxshaMkara, porx. esf, naMjuMDayayxnavaru vidhivasharAdaru. avara anupa\-sithxti elalx saBegaLalUlx bahaLavAgi kADitu. aMtimavAgi porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, vidAvxnf DA. ecf.vi. nAgarAjarAvf, DA. enf.esf. tArAnAtha, DA. si. shivakumArasAvxmi, shirxV. Arf.esf. pUNARnaMda, DA. naMdiVshf haMce ivavaru\-gaLanunx oLagoMDa saMpAdaka samitiyu 40kUkx hecucx saBegaLanunx naDesi saBA\-parxtiyanunx parishiVlisi, muKayx ulelxVKagaLanunx athaR, niSapxtitxgaLanunx, athaRcACxye, ulelxVKagaLanunx kUlaMkaSavAgi gamanisi niGaMTu\-vige oMdu sapxSaTx rUpavanunx niVDitu. I saMdaBaRdalilx je{esf}{esf} mahA vidAyxpiVThada shirxV basavaNaNxnavaru hAgU meYsUru vishavxvidAyxnilayada parxsArAMgada nivaqtatx nwkararAda shirxVmati kamalamamxnavaru karaDu tidudxvalilx mADida sahAya bahu doDaDxdu.
+I naDuve samitiya sadasayxrAgidadx shirxV enf. basavArAdhayx, DA. esf. vidAyxshaMkara, porx. esf, naMjuMDayayxnavaru vidhivasha\-rAdaru. avara anupa\-sithxti elalx saBegaLalUlx bahaLavAgi kADitu. aMtimavAgi porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, vidAvxnf DA. ecf.vi. nAgarAjarAvf, DA. enf.esf. tArAnAtha, DA. si. shivakumArasAvxmi, shirxV. Arf.esf. \hbox{pUNARnaMda}, DA. naMdiVshf haMce ivavaru\-gaLanunx oLagoMDa saMpAdaka samitiyu 40kUkx hecucx saBe\-gaLanunx naDesi saBA\-parxtiyanunx parishiVlisi, muKayx ulelxVKagaLanunx athaR, niSapxtitxgaLanunx, athaRcACxye, ulelxVKagaLanunx kUlaMkaSavAgi gamanisi niGaMTu\-vige oMdu sapxSaTx rUpavanunx niVDitu. I saMdaBaRdalilx je{esf}{esf} mahA vidAyxpiVThada shirxV basavaNaNxnavaru hAgU \hbox{meYsUru} vishavxvidAyxnilayada parxsArAMgada nivaqtatx nwkararAda shirxVmati kamalamamxnavaru karaDu tidudxvalilx mADida sahAya bahu doDaDxdu.
 
 \medskip
 
@@ -177,7 +177,7 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 \bigskip
 \end{center}
 \begin{itemize}
-\item {\bf pUNaR virAma (.)} : muKayx ulelxVKada anaMtara adu saMsakxqqta/ vacana/ kAvayxgaLiMda mAtarx parxyoVgagaLanunx niVDa\-lAgideyeV eMbudanunx kaMsa\-dalilx sUcisida naMtara hAgU athaRCAyeyanunx toVrisuva 1, 2 muMtAda saMKeyxgaLa muMdeyU; athaR, parxyoVga\-gaLu modalAda elalx vivaragaLU mugida meVle niSapxtitx AraMBagoLuLxva pUvaRdalilx; udadhxrisida  parxyoVgagaLa AkaragaLa saMkiSxpatx sUciya kaqti hAgU kataqRvina muMde hAgU parA\,(parAmasheR), noVDi, visheVSa muMtAda saMkeVtagaLa muMde pUNaRvirAma cihenxyanunx baLasalAgide. udAharaNege: nAdacakarx: (va). cakarxvu ratha calisalu AdhAravAgiruvaMte pArxpaMcika vayxvahAragaLige kAraNavAgiruva shivashakitx; mUla\-tatatxvX: kAlacakarx kamaRcakarx nAdacakarx biMducakarx I nAlukx cakarxva sAdhisiheveMba hiriyarelalx keTuTxhoVdaru ...nAdacakarx jaMgama\-keSxVtarx biMducakarx parxsAdakeSxVtarx (savasaM. 3; cenanxba. 293-92); kAlacakarx kamaRcakarx nAdacakarx biMducakarxdoLage huTaTxda yoVni\-yilalx, meTaTxda nela\-vilalx (savasaM. 3; cenanxba. 1151-397).
+\item {\bf pUNaR virAma (.)} : muKayx ulelxVKada anaMtara adu saMsakxqqta/ vacana/ kAvayxgaLiMda mAtarx parxyoVgagaLanunx niVDa\-lAgideyeV eMbudanunx kaMsa\-dalilx sUcisida naMtara hAgU athaRCAyeyanunx toVrisuva 1, 2 muMtAda saMKeyxgaLa muMdeyU; athaR, parxyoVga\-gaLu modalAda elalx vivaragaLU mugida meVle niSapxtitx AraMBagoLuLxva pUvaRdalilx; udadhxrisida  parxyoVgagaLa AkaragaLa saMkiSxpatx sUciya kaqti hAgU kataqRvina muMde hAgU parA\,(parAmasheR), noVDi, visheVSa muMtAda saMkeVtagaLa muMde pUNaRvirAma cihenxyanunx baLasalAgide. udAharaNege: nAdacakarx: (va). cakarxvu ratha calisalu AdhAravAgiruvaMte pArxpaMcika vayxvahAragaLige kAraNavAgiruva shivashakitx; mUla\-tatatxvX: kAlacakarx kamaRcakarx nAdacakarx biMducakarx I nAlukx cakarxva sAdhisiheveMba hiriyarelalx keTuTxhoVdaru ...nAdacakarx jaMgama\-keSxVtarx biMducakarx parxsAda\-keSxVtarx (savasaM. 3; cenanxba. 293-92); kAlacakarx kamaRcakarx nAdacakarx biMducakarxdoLage huTaTxda yoVni\-yilalx, meTaTxda nela\-vilalx (savasaM. 3; cenanxba. 1151-397).
 
 \noindent
 (nAdasayx cakarxM - nAdacakarxM)
