--- a/shubhasandesha.tex
+++ b/shubhasandesha.tex
@@ -32,7 +32,7 @@ jagatitxna bahumuKi saMsakxqqtige avakAsha kalipxsiruva rASaTxrXgaLalilx BArata 
 
 \medskip
 
-parxtiyoMdu kulamata-paMtha tananxdeV Ada dhAmiRka, sAmAjika nuDigaTuTxgaLanunx saqSiTxsikoMDirutatxde. aMtha nuDigaTiTxna hiMde oMdu iDiV paraMpareya AshayagaLu, kalapxnegaLu irutatxve. A kalapxne matutx AshayagaLanunx ariyade yAvudeV oMdu dhAmiRka vicAravanunx sAmAnayx athaRdalilx pariBAvisalu sAdhayxvAguvudilalx. I hinenxleyalilx viVrasheYva/liMgAyata dhamaRda pariBASe\-yanunx, nuDigaTuTxgaLanunx ariyuva saluvAgi I baqhatf pariBASAkoVshavanunx sidadhxpaDisalAgide. idoMdu mahatavxpUNaRvU upayukatxvU Ada garxMtha eMbudaralilx saMshayavilalx. BAratiVya matadhamaRgaLa hinenxleyalilx janakalAyxNa, loVkakalAyxNa\-vanunx bayasuva dhamaRveMdare adu viVrasheYva/liMgAyata dhamaR. vaqtitxya kushalate matutx samAjada munanxDegAgi veVdagaLa kAladalilx rUpugoMDa guNadhamARdhArita cAtuvaRNaR vayxvasethx naMtaradalilx jAtigaLAgi parivataRne hoMdidavu eMbudu \hbox{vidAvxMsara} aBimata. I nAlukx vaNaRgaLAce uLidavaranunx paMcamaru (aidaneyavaru) eMdu saMKAyxmAtarxvAgi gurutisalAgutitxtutx. Adare viVrasheYva/liMgAyata dhamaR I paMcamavagaRda parikalapxneyanunx unanxtiVkarisi\break \textbf{ativaNARsharxma} eMba vishiSaTx vayxvasethxyanunx rUpisitu. dAnada parikalapxneya sathxLadalilx dAsoVha, kAyakaveV keYlAsa eMba ciMtane beLedubaMdavu. iMtha aneVka veYshiSaTxyXpUNaR viVrasheYva-liMgAyata pariBASegaLanunx I garxMthavu vivarisutatxde.
+parxtiyoMdu kulamata-paMtha tananxdeV Ada dhAmiRka, sAmAjika nuDigaTuTxgaLanunx saqSiTxsikoMDirutatxde. aMtha nuDigaTiTxna hiMde oMdu iDiV paraMpareya AshayagaLu, kalapxnegaLu irutatxve. A kalapxne matutx AshayagaLanunx ariyade yAvudeV oMdu dhAmiRka vicAravanunx sAmAnayx athaRdalilx pariBAvisalu sAdhayxvAguvudilalx. I hinenxleyalilx viVrasheYva/liMgAyata dhamaRda pariBASe\-yanunx, nuDigaTuTxgaLanunx ariyuva saluvAgi I baqhatf pariBASAkoVshavanunx sidadhxpaDisalAgide. idoMdu mahatavx\-pUNaRvU upayukatxvU Ada garxMtha eMbudaralilx saMshayavilalx. BAratiVya matadhamaRgaLa hinenxleyalilx janakalAyxNa, loVkakalAyxNa\-vanunx bayasuva dhamaRveMdare adu viVrasheYva/liMgAyata dhamaR. vaqtitxya kushalate matutx samAjada munanxDegAgi veVdagaLa kAladalilx rUpugoMDa guNadhamARdhArita cAtuvaRNaR vayxvasethx naMtaradalilx jAtigaLAgi parivataRne hoMdi\-davu eMbudu \hbox{vidAvxMsara} aBimata. I nAlukx vaNaRgaLAce uLidavaranunx paMcamaru (aidaneyavaru) eMdu saMKAyxmAtarxvAgi gurutisalAgutitxtutx. Adare viVrasheYva/liMgAyata dhamaR I paMcamavagaRda parikalapxneyanunx unanxtiVkarisi\break \textbf{ativaNARsharxma} eMba vishiSaTx vayxvasethxyanunx rUpisitu. dAnada parikalapxneya sathxLadalilx dAsoVha, kAyakaveV keYlAsa eMba ciMtane beLedubaMdavu. iMtha aneVka veYshiSaTxyXpUNaR viVrasheYva-liMgAyata pariBASegaLanunx I garxMthavu vivarisutatxde.
 
 \medskip
 
