--- a/tex-for-print/anubandha-4.tex
+++ b/tex-for-print/anubandha-4.tex
@@ -50,7 +50,7 @@
 {\bf 22. keV.u.} & keVnoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM.) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1980\\
 {\bf 23. keY.u.} & keYvaloyxVpaniSatf\newline (sadAshivaBASoyxVpeVta) &-& shirxV sadAshiva shivAcAyaRH & parxboVdha pusatxka mAlA, beMgaLUru\newline 1951\\
 {\bf 24. keY.sA.} & keYvalayxsAraH &-& virakatx toVMTadAyaR & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1988\\
-{\bf 25. kirx.sA.} & \hbox{kirxyAsAraH} &-& niVlakaMTha shivAcAyaR (BA-1, 2, 3) & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1954\newline 1957, 1958\\
+{\bf 25. kirx.sA.} & \hbox{kirxyAsAraH} &-& niVlakaMTha shivAcAyaR\newline (BA-1, 2, 3) & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1954\newline 1957, 1958\\
 {\bf 26. gw.kA.} & gwDapAdakArikA\newline (mAMDUkoyxVpaniSatf BASayx) &-& sAvxmi cinamxyAnaMda & cinamxya parxkAshana\\
 %26. & caMdarxjAcnxnAgama\newline (kirxyApAda-cayARpAda)\newline (AMgalxBASAnuvAda sahita) &-& saM. DA. ramAGoVSf, sheYva BArati shoVdha parxtiSAThxna, vArANasi, 1995\\
 {\bf 27. caM.A.} & caMdarxjAcnxnAgamaH\newline (kirxyApAda-cayARpAda)\newline (kananxDAnuvAda sahita) &-& (saM.) DA. eM. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 2002\\
@@ -137,17 +137,17 @@
 {\bf 92. viV.sa.saM.} & viVrasheYva sadAcAra saMgarxha\newline (kananxDAnuvAda sahita) &-& (saM) paM. basavarAjashAsitxrXV pagaDadininxmaTha & shirxV jagadugxru garxMtha parxkAshikA garxMthAvali\newline mUrusAvira maTha\newline hubabxLiLx, 1964\\
 %{\bf 113. veV.ciM.} & veVdAMtaciMtAmaNiH &-& & \\
 {\bf 93. veV.sA.u.} & veVdAMtasAroVpaniSatf\newline (sheYvoVpaniSatasxMgarxhaH) &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1948 (divxtiVyAvaqtitx)\\
-{\bf 94. veV.sA.viV.caM.} & veVdAMtasAraviVrasheYvaciMtAmaNi\newline (utatxrakAMDa) (niTUTxru naMja\-NAyaR)\newline (marAThi anuvAda sahita) &-& (saM) shirxV malilxkAjuRna shAsitxrXV & shirxV datatxparxsAda\newline siTxVmf perxsf\newline soVlApura, 1908\\
+{\bf 94. veV.sA.viV.caM.} & veVdAMtasAraviVrasheYvaciMtAmaNi\newline (utatxrakAMDa)\newline (niTUTxru \hbox{naMja\-NAyaR})\newline (marAThi anuvAda sahita) &-& (saM) shirxV malilxkAjuRna shAsitxrXV & shirxV datatxparxsAda\newline siTxVmf perxsf\newline soVlApura, 1908\\
 {\bf 95. veY.shiva.} & veYdika shivapUjA vidhi &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1980 (eMTaneya Avaqtitx)\\
 {\bf 96. shaM.saM.} & shaMkarasaMhitA\newline (sakxMdapurANaMtagaRta) &-& (saM) KeVmarAja shirxVkaqSaNxdAsf & muMbayi, vi.saM. 1935\\
 {\bf 97. sha.u.} & sharaBoVpaniSatf\newline (upaniSatasxMgarxha) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAlf banArasidAsf\newline dehali, 1970\\
 {\bf 98. sha.kw.} & shabAdxthaRkwsutxBaH\newline (saMsakxqqta-kananxDa niGaMTu)\newline (BAga 1-6) &-& cakarxvatiR shirxVnivAsa rAjagoVpAlAcAyaR & bApokxV parxkAshana\newline beMgaLUru, 1999\\
-{\bf 99. shakitx.vi.} & shakitxvishiSATxdevxYta tatatxvXtarxya vimasheR\newline (kananxDAnuvAda) &-& DA. si. shivakumArasAvxmi & rAjayx patArxgAra ilAKe (kanARTaka sakARra)\newline beMgaLUru, 2009\\
+{\bf 99. shakitx.vi.} & shakitxvishiSATxdevxYta tatatxvXtarxya vimasheR\newline (kananxDAnuvAda) &-& DA. si. shivakumArasAvxmi & rAjayx patArxgAra ilAKe\newline (kanARTaka sakARra)\newline beMgaLUru, 2009\\
 {\bf 100. shata.tarx.} & shatakatarxyamf (mAyideVva) &-& paM. veY. nAgeVsha shAsitxrXV & muruGAmaTha\newline dhAravADa, 1964\\
 {\bf 101. sha.vi.da.} & shakitxvishiSATxdevxYtadashaRnamf &-& DA. Ti.ji. sidadhxpApxrAdhayx & gubibx shirxV cenanxbasaveVshavxra garxMthamAlA\newline meYsUru, 1934\\
 {\bf 102. shA.BA.} & shAMkaraBASayxmf\newline (barxhamxsUtarx) &-& niNaRyasAgarf perxsf & muMbayi, 1909\\
 {\bf 103. shi.ta.ra.} & shivatatatxvXratAnxkaraH\newline (keLadi basavaBUpAla) &-& pArxcayx vidAyx saMshoVdhanAlaya & meYsUru, BAga-1 (1964), BAga-2 (1969), BAga-3 (1975)\\
-{\bf 104. shi.da.} & shivAdevxYtadapaRNaH\newline (kananxDAnuvAda sahita) &-& (1) pUvalilxV baqhanamxTha garxMthamAle,\newline \,\phantom{\quad} hUli, 1928\newline (2) vidAvxnf bi. rAjasheVKarayayx & shirxV jagadugxru raMBApuriVshavxra\newline garxMtha parxkAshana\newline hubabxLiLx, 2017\\
+{\bf 104. shi.da.} & shivAdevxYtadapaRNaH\newline (kananxDAnuvAda sahita) &-& (1) pUvalilxV baqhanamxTha garxMthamAle,\newline \,\phantom{\quad~~} hUli, 1928\newline (2) vidAvxnf bi. rAjasheVKarayayx & shirxV jagadugxru raMBApuriVshavxra\newline garxMtha parxkAshana\newline hubabxLiLx, 2017\\
 {\bf 105. shi.maM.} & shivAdevxYtamaMjariV \hbox{(savxparxBAnaMda shivAcAyaR)}\newline (kananxDa vAyxKAyxnasahita) &-& shirxV rAmAnuja ayayxMgArf & paMcAcAyaR perxsf\newline meYsUru, 1929\\
 {\bf 106. shi.mA.pU} & shivamAnasapUjAsotxVtarxmf\newline (shaMkarAcAyaR viracita)\newline veYdika shivapUjA vidhi, &-&  kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1988\\
 {\bf 107. shi.yoV.parx.} & shivayoVgaparxdiVpikA\newline (\hbox{cenanxsadAshiva\-yoVgi})\newline (kananxDa TiVkAsahita) &-& TiVkAkAra: basavArAdhayx & kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya\newline dhAravADa, 1976\\
@@ -711,7 +711,7 @@
 \end{center}
 
 
-{\renewcommand{\arraystretch}{1.45}
+{\renewcommand{\arraystretch}{1.37}
 \begin{longtable}{>{\bf}lp{4.2cm}p{4.2cm}<{\raggedright}p{4.2cm}<{\raggedright}@{}}
 %\begin{longtable}{l>{\raggedright}p{7cm}l}
 \hline
@@ -789,3 +789,6 @@
 %a\char'273\char'311mA '' & a\char'273\char'311vina mAritaMdegaLa vacanagaLu & \qquad '' '' ''\\
 %urideV '' & uriliMgadeVvara vacana & \qquad '' '' ''\\
 %uripe '' & uriliMgapedidxgaLa vacana & \qquad '' '' ''\\
+
+\newpage
+\thispagestyle{empty}
